web: mobile layout / safe area (#6408)
* improve status bar / safe area coloring

* improve status coloring

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -250,6 +250,105 @@ active_home: true
         io.observe(cover);
     })();
     </script>
+    <script>
+    (function sectionHeaderState(){
+        const mobileHeader = document.getElementById('mobile-header');
+        if (!mobileHeader) return;
+
+        const cover     = document.querySelector('.page-1.cover');
+        const messaging = document.getElementById('messaging');
+        const nextweb   = document.getElementById('nextweb');
+        const token     = document.getElementById('token');
+        const roadmap   = document.getElementById('roadmap');
+        const directory = document.getElementById('directory');
+        const footer    = document.querySelector('footer, .footer, #footer');
+
+        const observed = [
+            { key: 'cover',  el: cover },
+            { key: 'main',   el: messaging },
+            { key: 'main',   el: nextweb },
+            { key: 'main',   el: token },
+            { key: 'main',   el: roadmap },
+            { key: 'main',   el: directory },
+            { key: 'footer', el: footer }
+        ].filter(t => t.el);
+
+        if (!observed.length) return;
+
+        const MIN_COVER = 0.02;
+
+        function clear(){
+            mobileHeader.classList.remove('cover','main','footer');
+        }
+
+        function apply(key){
+            clear();
+            if (key) mobileHeader.classList.add(key);
+        }
+
+        function viewportCoverageY(el){
+            const r  = el.getBoundingClientRect();
+            const vh = window.innerHeight || document.documentElement.clientHeight;
+            const visibleY = Math.max(0, Math.min(vh, r.bottom) - Math.max(0, r.top));
+            return visibleY / Math.max(1, vh);
+        }
+
+        function computeKeyMax(){
+            const keyMax = { cover: 0, main: 0, footer: 0 };
+            for (const t of observed) {
+                const ratio = viewportCoverageY(t.el);
+                if (ratio > keyMax[t.key]) keyMax[t.key] = ratio;
+            }
+            return keyMax;
+        }
+
+        let lastKey = null;
+        let rafId = null;
+
+        function update(){
+            rafId = null; // Reset RAF flag
+
+            const keyMax = computeKeyMax();
+
+            let bestKey = null, best = MIN_COVER;
+            for (const [k, r] of Object.entries(keyMax)) {
+                if (r > best) { best = r; bestKey = k; }
+            }
+
+            // Only update DOM if state actually changed
+            if (bestKey !== lastKey) {
+                if (bestKey) {
+                    apply(bestKey);
+                } else {
+                    clear();
+                }
+                lastKey = bestKey;
+            }
+        }
+
+        function scheduleUpdate(){
+            if (rafId) return; // Already scheduled
+            rafId = requestAnimationFrame(update);
+        }
+
+        let observer = null;
+
+        if ('IntersectionObserver' in window) {
+            observer = new IntersectionObserver(scheduleUpdate, {
+                threshold: [0, 0.02, 0.1, 0.25, 0.5, 0.75, 1],
+                rootMargin: '0px 0px -35% 0px'
+            });
+            observed.forEach(t => observer.observe(t.el));
+            scheduleUpdate(); // Initial update
+        } else {
+            // Fallback for older browsers
+            ['scroll','resize','load'].forEach(ev => 
+                window.addEventListener(ev, scheduleUpdate, { passive: true })
+            );
+            scheduleUpdate();
+        }
+    })();
+    </script>
 </body>
 
 </html>
