website: layout fixes, token button

--- a/website/src/directory.html
+++ b/website/src/directory.html
@@ -9,7 +9,6 @@ active_directory: true
 {% set lang = page.url | getlang %}
 {% block js_scripts %}
 <script src="/js/flag-anchor.js"></script>
-<script async defer src="/js/directory.js"></script>
 {% endblock %}
 
 <style>
@@ -272,3 +271,5 @@ active_directory: true
     <div id="bottom-pagination" class="pagination"></div>
   </div>
 </section>
+
+<script src="/js/directory.js"></script>
