--- a/website/src/index.html
+++ b/website/src/index.html
@@ -81,7 +81,7 @@ active_home: true
                                     <img class="no-border" src="/img/design_3/socials/apple.png" alt="">
                                     <img class="no-border" src="/img/design_3/socials/windows.png" alt="">
                                 </div>
-                                <p>Download Desktop App</p>
+                                <p>Download<br>Desktop App</p>
                             </div>
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
@@ -97,7 +97,7 @@ active_home: true
                         <a class="box-btn btn-1" title="{{ 'index-security-review-2022-title' | i18n({}, lang) }}" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn btn-2" title="{{ 'index-security-review-2024-title' | i18n({}, lang) }}" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn gold-gradient" title="{{ 'index-security-review-2024-title' | i18n({}, lang) }}" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
@@ -109,13 +109,13 @@ active_home: true
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
                         <a title="{{ 'index-publications-whonix-title' | i18n({}, lang) }}" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
-                            <img src="/img/design_3/publications/whonix.png" alt="Whonix">
+                            <img src="/img/design_3/publications/whonix.png" alt="Whonix" class="whonix">
                         </a>
                         <a title="{{ 'index-publications-heise-title' | i18n({}, lang) }}" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
                         <a title="{{ 'index-publications-kuketz-title' | i18n({}, lang) }}" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
-                            <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
+                            <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog" class="kuketz">
                         </a>
                         <a title="{{ 'index-publications-optout-title' | i18n({}, lang) }}" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
@@ -342,7 +342,7 @@ active_home: true
             scheduleUpdate(); // Initial update
         } else {
             // Fallback for older browsers
-            ['scroll','resize','load'].forEach(ev => 
+            ['scroll','resize','load'].forEach(ev =>
                 window.addEventListener(ev, scheduleUpdate, { passive: true })
             );
             scheduleUpdate();
