--- a/website/src/blog.html
+++ b/website/src/blog.html
@@ -41,14 +41,14 @@ active_blog: true
 
 <section class="py-10 px-5 mt-[66px]" id="blog-list">
     <div class="container">
-        <h1 class="text-[38px] text-center font-bold text-active-blue mb-9">Latest news</h1>
+        <h1 class="text-[38px] text-center font-bold mb-9">Latest news</h1>
 
         {% for blog in collections.blogs %}
         {% if not(blog.data.draft) %}
         <article
-            class="w-full flex flex-col items-start md:flex-row rounded-[4px] overflow-hidden shadow-[0px_20px_30px_rgba(0,0,0,0.12)] dark:shadow-none bg-white dark:bg-[#11182F] mb-8">
+            class="w-full flex flex-col items-start md:flex-row rounded-[4px] overflow-hidden shadow-[0px_20px_30px_rgba(0,0,0,0.12)] dark:shadow-none bg-white dark:bg-[#0B2A59] mb-8">
             <div
-                class="min-h-[200px] h-[inherit] self-stretch md:w-[168px] bg-[#DBEEFF] dark:bg-[#17203D] flex items-center justify-center flex-[1] relative">
+                class="min-h-[200px] h-[inherit] self-stretch md:w-[168px] bg-[#DBEEFF] dark:bg-[#071C46] flex items-center justify-center flex-[1] relative">
                 <div class="min-h-[inherit] h-full w-full flex items-end px-4 pt-4 justify-center relative">
                     {% if blog.data.image %}
                     {% if blog.data.imageBottom %}
