--- a/website/src/index.html
+++ b/website/src/index.html
@@ -61,7 +61,7 @@ active_home: true
     </script>
 </head>
 
-<body>
+<body class="bg-[#C1E3FE] dark:bg-[#050920]">
     {% include "navbar.html" %}
     {% set lang = page.url | getlang %}
 
