--- a/token/index.html
+++ b/token/index.html
@@ -572,8 +572,8 @@ window.addEventListener('click',(e)=>{
 <ul>
 <li>full name: <strong>SimpleX Community Voucher</strong>.</li>
 <li>symbol: SMPX.</li>
-<li>network: TBC. There are several viable L2 candidates: Arbitrum One, Optimism, Polygon, etc.</li>
-<li>standard: ERC20, with contract-enforced supply and other limits on transactions and holdings (TBD based on modeling and testing, these will not be the usual freely tradable ERC20 tokens).</li>
+<li>network: TBC. There are several viable L2 candidates: Arbitrum One, Optimism, Polygon, etc., and we are considering other networks as well.</li>
+<li>standard: ERC20, with contract-enforced supply and other limits on transactions and holdings (TBD based on modeling and testing, these will not be freely tradable ERC20 tokens).</li>
 </ul>
 <p><strong>Potential utilities</strong></p>
 <ul>
@@ -587,7 +587,7 @@ window.addEventListener('click',(e)=>{
 <h3 id="why-community-vouchers" tabindex="-1">Why Community Vouchers?</h3>
 <img src="/img/design_3/community_vouchers_light.jpg" width="38%" class="float-to-right dark:hidden">
 <img src="/img/design_3/community_vouchers_dark.jpg" width="38%" class="float-to-right hidden dark:block">
-<p>To cover server bills securely and privately.</p>
+<p>To cover server costs securely and privately.</p>
 <p>With &quot;free&quot; centralized platforms:</p>
 <ul>
 <li>you lose security and privacy, because your data is used for advertising and sold.</li>
@@ -595,17 +595,49 @@ window.addEventListener('click',(e)=>{
 <li>you don't own all rights to your content.</li>
 </ul>
 <p>Paying for server capacity is cheaper than &quot;free&quot; platforms. Our estimates based on the current costs are $5-10/month for 5,000 active message receivers (could be up to 50,000 listed community members) with 5-10 GB of files/media archive. These estimates are preliminary and may change.</p>
-<h3 id="why-build-on-ethereum-blockchain" tabindex="-1">Why build on Ethereum blockchain?</h3>
-<p>Many people dislike Ethereum for its high energy usage and high transaction costs in the past. Also, blockchain transactions cannot provide privacy, can they? Why not use Monero (XMR) instead?</p>
-<p>This was our assessment as well in the past. But the last three years changed it, addressing energy usage and transaction costs, and we've seen the growth of several L2 Ethereum blockchains. What made us decide that EVM-based blockchain is the best choice for the current stage is the planned rollout of zkEVM in 2025 with native support for zero-knowledge proofs.</p>
-<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2024-04-26-commercial-model.md">Our early ideas about Community Vouchers</a> and <a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-10-23-vouchers.md">the most recent design</a> rely on zero-knowledge proofs, and as it will be natively supported, EVM blockchains provide a much better foundation to build Community Vouchers than building them from scratch — there is no need to re-invent solutions to problems that are already solved.</p>
 <h3 id="free-tier" tabindex="-1">Free Tier?</h3>
 <p>It will be determined after testing. Preliminarily, we expect up to 1,000 active message receivers (can be up to 10,000 listed members) and 500 MB storage to be available for free groups.</p>
-<h3 id="why-not-existing-crypto" tabindex="-1">Why Not Existing Crypto?</h3>
-<p>Existing cryptocurrencies do not allow the implementation of the required model for Community Vouchers. The price of cryptocurrencies is determined speculatively, and not based on costs. The fact that they can be freely traded and transferred exposes existing cryptocurrencies and tokens to financial regulations.</p>
+<p>&quot;Active message recipient&quot; in this model is a group member who periodically connects to the network, and receives group messages. Members who are listed but don't open the group for some time, for example two weeks, will stop receiving all group messages even when they are connected to the network. This is an evolving design that will balance security for group members and owners, to avoid inflated expenses, and to present realistic membership statistics to the group owners and to prospective members.</p>
+<p>Private messaging with contacts and in private groups within &quot;fair use&quot; limits we apply today will remain free:</p>
+<ul>
+<li>there can be up to 128 undelivered messages per destination,</li>
+<li>the undelivered messages are stored up to 21 days,</li>
+<li>files up to 1 GB can be sent for free,</li>
+<li>files are available for download for up to 2 days.</li>
+</ul>
+<p>Larger limits may be offered in paid tier, but it is not planned initially — the focus of Community Vouchers is to create a commercial model for communities.</p>
 <h3 id="how-might-vouchers-work" tabindex="-1">How Might Vouchers Work?</h3>
 <p>Buy via app (like phone top-ups), with unused capacity shown in the app.</p>
-<p>V1 would use hashed IDs for privacy and on-chain payments. Zero-knowledge proofs and in-app payments to be added later.</p>
+<p>Testnet is likely to use hashed IDs for privacy and on-chain payments, to validate the pricing and economic model. Zero-knowledge proofs and in-app payments will be added by the time production network is launched.</p>
+<h3 id="will-self-hosted-servers-still-be-supported-by-simplex-network" tabindex="-1">Will self-hosted servers still be supported by SimpleX network?</h3>
+<p>Yes, absolutely. Not only we will continue to provide support to self-hosted servers, but we will improve it. We see network decentralization and server portability as exceptionally important, and while we need to develop a robust commercial model for the servers, we still need community supported servers to function, with all servers operating in single network.</p>
+<p>It will be possible for all users:</p>
+<ul>
+<li>to join paid groups that use Community Vouchers via your own servers.</li>
+<li>to join groups that are run on free community-hosted servers.</li>
+<li>to create new server operators (collections of servers operated by one entity), so that the same features that are now available only for preset servers will be available to all servers very soon.</li>
+</ul>
+<h3 id="what-problems-community-vouchers-solve-that-other-payment-methods-cant" tabindex="-1">What problems Community Vouchers solve that other payment methods can't?</h3>
+<p>Community Vouchers implemented via smart contracts on blockchain solve these problems:</p>
+<ul>
+<li>unlinkability of the voucher purchase and usage - to confirm ownership smart contracts will use zero-knowledge proofs, rather than visible transfers between blockchain addresses. While any blockchain observers may see that a given address purchased a voucher, they will not see how vouchers are used.</li>
+<li>server operators cannot fail to provide infrastructure — the funds will be locked in a smart contract until it is provided.</li>
+<li>codify the agreement about how revenue is shared between server operator and the network, so that it depends not on trust, but on cryptography.</li>
+</ul>
+<h3 id="how-is-it-possible-to-provide-privacy-on-public-blockchain" tabindex="-1">How is it possible to provide privacy on public blockchain?</h3>
+<p>In the same way it is possible to provide private communications on the public Internet, as SimpleX network does.</p>
+<p>Our commitment to users' privacy and security remains as strong as ever, and we plan to bring the practical expertise of building private communication protocols over the last 5 years to how we develop the technology for the blockchain.</p>
+<p>While specific designs are in early stages, here are some of the principles that we will follow to ensure privacy:</p>
+<ul>
+<li>each voucher purchase will be associated with a new blockchain address. There will be no per-user addresses, as wallets use. So the cornerstone of SimpleX network design - no user profile IDs - will be followed for blockchain development as well.</li>
+<li>all operations on blockchain will be supported by network servers that will run full blockchain nodes. For important requests, such as name resolution, the clients will use 2 or 3 independent servers, to ensure protection from MITM attacks.</li>
+<li>blockchain operations will be proxied, in the same way as it happens with private message routing.</li>
+</ul>
+<p>We will be publishing the whitepaper with this design. It will provide an unprecedented level of security and privacy for blockchain applications, irrespective of which chain we choose to use.</p>
+<h3 id="how-many-community-vouchers-will-be-pre-sold-and-available-during-public-sale" tabindex="-1">How many Community Vouchers will be pre-sold and available during public sale?</h3>
+<p>None. There will be no Community Vouchers pre-sold or in any other way made available to the team, or to investors or to the public.</p>
+<p>Any blockchain token that is pre-sold to insiders and/or to the public with the objective to raise funds to develop technology is not a utility token, regardless of how it's named — it becomes an investment contract that passes <a href="https://www.investopedia.com/terms/h/howey-test.asp">Howey test</a>.</p>
+<p>This is not what we are doing. Community Vouchers are restricted utility tokens, not an investment contract. They will be only issued on demand to people who want to pay for network servers, at a fixed price.</p>
 <h3 id="who-will-sell-vouchers" tabindex="-1">Who will sell vouchers?</h3>
 <p>Community Vouchers will be sold via a smart contract in exchange for some other tradeable tokens, most likely stablecoins. We don't plan token emission, or any public or private pre-sales. And we won't have access to the funds from voucher sales — they will be locked in a smart contract, and only released once servers have provided capacity to the users, with the funds shared between server operators and SimpleX network, with operators receiving up to 60%, depending on trust evaluation. SimpleX network funds will be managed by smart contracts, and will be used for governance and development as defined by the contracts. Their price will be fixed based on server costs, with the exact economic model developed during testing phase.</p>
 <h3 id="who-will-control-and-upgrade-smart-contracts" tabindex="-1">Who will control and upgrade smart contracts?</h3>
@@ -614,11 +646,22 @@ window.addEventListener('click',(e)=>{
 <h3 id="will-i-be-able-to-sell-or-transfer-community-vouchers-to-other-people" tabindex="-1">Will I be able to sell or transfer Community Vouchers to other people?</h3>
 <p>Possibly, but with limits on the number of transactions and the time of holding.</p>
 <p>Community Vouchers are designed with a single purpose — to facilitate payments for servers' capacity in a way that protects users' security. Smart contracts implementing them will restrict or completely prohibit trading. The specific parameters will be determined during design evolution and testing.</p>
+<h3 id="why-not-existing-crypto" tabindex="-1">Why Not Existing Crypto?</h3>
+<p>Existing cryptocurrencies do not allow the implementation of the required model for Community Vouchers. The price of cryptocurrencies is determined speculatively, and not based on costs. The fact that they can be freely traded and transferred exposes existing cryptocurrencies and tokens to financial regulations.</p>
+<p>The existing cryptocurrencies such as XMR, BTC and some others are very likely to be accepted as payment for Community Vouchers, via bridges, but they cannot be used in the foundation of the system, because they are not as flexible as smart contracts, and cannot directly support the model we are developing.</p>
+<h3 id="why-build-on-ethereum-blockchain" tabindex="-1">Why build on Ethereum blockchain?</h3>
+<p>Many people dislike Ethereum for its high energy usage and high transaction costs in the past. Also, blockchain transactions cannot provide privacy, can they? Why not use Monero (XMR) instead?</p>
+<p>This was our assessment as well in the past. But the last three years changed it, addressing energy usage and transaction costs, and we've seen the growth of several L2 Ethereum blockchains. What made us decide that EVM-based blockchain is the best choice for the current stage is the planned rollout of zkEVM in 2025 with native support for zero-knowledge proofs.</p>
+<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2024-04-26-commercial-model.md">Our early ideas about Community Vouchers</a> and <a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-10-23-vouchers.md">the most recent design</a> rely on zero-knowledge proofs, and as it will be natively supported, EVM blockchains provide a much better foundation to build Community Vouchers than building them from scratch — there is no need to re-invent solutions to problems that are already solved.</p>
+<h3 id="have-you-considered-other-blockchains" tabindex="-1">Have you considered other blockchains?</h3>
+<p>We are actively considering which blockchain to build on. Ethereum ecosystem is the most widely adopted, and has very mature systems and tools, and it appears sufficient, but it has its downsides, as does everything. So we are not yet committed to Ethereum.</p>
 <h3 id="why-use-erc20-specification-isnt-it-designed-for-freely-tradable-tokens" tabindex="-1">Why use ERC20 specification — isn't it designed for freely tradable tokens?</h3>
-<p><a href="https://eips.ethereum.org/EIPS/eip-20">ERC20 specification</a> has wider scope. It is very simple, one of the earliest, and the most adopted standards on EVM blockchain. It defines tokens, but they don't have to be freely tradeable — the specification allows any extensions and restrictions implemented on top of it.</p>
+<p><a href="https://eips.ethereum.org/EIPS/eip-20">ERC20 token specification</a> has wider scope. It is very simple, one of the earliest, and the most adopted standard on EVM blockchain. It defines tokens, but they don't have to be freely tradeable — the specification allows any extensions and restrictions implemented on top of it.</p>
 <p>Because of its wide adoption, this specification is the right choice to build on, at least initially, as it will be compatible with all wallets and existing tools out of the box, making testing, development, and early adoption much easier.</p>
+<h3 id="if-you-build-on-another-blockchain-how-the-nft-will-be-used-to-provide-access" tabindex="-1">If you build on another blockchain, how the NFT will be used to provide access?</h3>
+<p>We can take into account the list of addresses that hold NFTs and provide access to testnet on any blockchain via a cryptographic signature. That is the reason the NFT is deployed on Ethereum mainnet and not on some of L2 chains. We don't yet know at this stage which L2 testnet will be used.</p>
 <h2 id="disclaimer" tabindex="-1">Disclaimer</h2>
-<p>This design is evolving — share your feedback!</p>
+<p>This design is evolving — please share your feedback.</p>
 <p>This is not an investment offer. All details are subject to legal review.</p>
 </div>
     </section>
