--- a/token/index.html
+++ b/token/index.html
@@ -564,6 +564,8 @@ window.addEventListener('click',(e)=>{
 <p>We're developing Community Vouchers as a way to enable secure payments to server operators, to make communities sustainable.</p>
 <p>Group or channel owners can select network operators for better reliability and censorship resistance than with traditional online publishing methods.</p>
 <p>These vouchers are blockchain utility tokens — to focus purely on server capacity usage, like prepaid telephone cards.</p>
+<p><strong>What these tokens are not</strong>: Community Vouchers are not freely tradable tokens. They are also not a way to raise funds.</p>
+<p><strong>What they are</strong>: A mechanism to pay for servers, privately. Our goal is to make it possible to buy Community Vouchers via usual credit card and in-app payments, so that everybody can use them, not only people who use cryptocurrencies.</p>
 <h2 id="smpx-community-voucher-token-planned-for-2026" tabindex="-1">SMPX: Community Voucher Token planned for 2026</h2>
 <p><a href="javascript:void(0);" data-show-overlay="mint-simplex-nft" class="open-overlay-btn"><img src="/img/design_3/simplex_nft_smpx.jpg" width="200" class="float-to-right" style="border-radius: 10px;"></a></p>
 <p>SMPX token is v1 of Community Vouchers. We are aiming to launch it in 2026.</p>
@@ -582,8 +584,26 @@ window.addEventListener('click',(e)=>{
 </ul>
 <p>We're working with blockchain and legal experts for feasibility and compliance, aiming to launch testnet in 2026. Details may change based on input. More in our upcoming whitepaper draft.</p>
 <p>To receive updates, sign up via email or connect to us <a href="https://smp6.simplex.im/a#lrdvu2d8A1GumSmoKb2krQmtKhWXq-tyGpHuM7aMwsw">via SimpleX Chat</a>.</p>
-<h2 id="community-vouchers-faq" tabindex="-1">Community Vouchers FAQ</h2>
+<h2 id="community-vouchers-faq-send-your-feedback" tabindex="-1">Community Vouchers FAQ — send your feedback</h2>
 <p>These are early insights into how Community Vouchers can work — some of these ideas are still vague; they will evolve based on your feedback and testing.</p>
+<ul>
+<li><a href="#why-community-vouchers">Why Community Vouchers?</a></li>
+<li><a href="#free-tier">Free Tier?</a></li>
+<li><a href="#how-will-vouchers-work">How Will Vouchers Work?</a></li>
+<li><a href="#will-self-hosted-servers-still-be-supported-by-simplex-network">Will self-hosted servers still be supported by SimpleX network?</a></li>
+<li><a href="#what-problems-community-vouchers-solve-that-other-payment-methods-cant">What problems Community Vouchers solve that other payment methods can't?</a></li>
+<li><a href="#how-is-it-possible-to-provide-privacy-on-public-blockchain">How is it possible to provide privacy on public blockchain?</a></li>
+<li><a href="#will-community-vouchers-be-pre-sold-via-private-or-public-sale">Will Community Vouchers be pre-sold via private or public sale?</a></li>
+<li><a href="#who-will-sell-vouchers">Who will sell vouchers?</a></li>
+<li><a href="#how-the-server-operator-revenue-share-is-determined">How the server operator revenue share is determined?</a></li>
+<li><a href="#who-will-control-and-upgrade-smart-contracts">Who will control and upgrade smart contracts?</a></li>
+<li><a href="#will-i-be-able-to-sell-or-transfer-community-vouchers-to-other-people">Will I be able to sell or transfer Community Vouchers to other people?</a></li>
+<li><a href="#why-not-existing-crypto">Why Not Existing Crypto?</a></li>
+<li><a href="#why-build-on-ethereum-blockchain">Why build on Ethereum blockchain?</a></li>
+<li><a href="#have-you-considered-other-blockchains">Have you considered other blockchains?</a></li>
+<li><a href="#why-use-erc20-specification-isnt-it-designed-for-freely-tradable-tokens">Why use ERC20 specification? Isn't it designed for freely tradable tokens?</a></li>
+<li><a href="#if-you-build-on-another-blockchain-how-the-nft-will-be-used-to-provide-access">If you build on another blockchain, how the NFT will be used to provide access?</a></li>
+</ul>
 <h3 id="why-community-vouchers" tabindex="-1">Why Community Vouchers?</h3>
 <img src="/img/design_3/community_vouchers_light.jpg" width="38%" class="float-to-right dark:hidden">
 <img src="/img/design_3/community_vouchers_dark.jpg" width="38%" class="float-to-right hidden dark:block">
@@ -594,11 +614,11 @@ window.addEventListener('click',(e)=>{
 <li>they de-platform inconvenient users, often based on frivolous complaints.</li>
 <li>you don't own all rights to your content.</li>
 </ul>
-<p>Paying for server capacity is cheaper than &quot;free&quot; platforms. Our estimates based on the current costs are $5-10/month for 5,000 active message receivers (could be up to 50,000 listed community members) with 5-10 GB of files/media archive. These estimates are preliminary and may change.</p>
+<p>Paying for server capacity may be cheaper than &quot;free&quot; platforms. Our estimates based on the current costs are $5-10/month for 5,000 active message receivers (could be up to 50,000 listed community members) with 5-10 GB of files/media archive. These estimates are preliminary and may change.</p>
 <h3 id="free-tier" tabindex="-1">Free Tier?</h3>
 <p>It will be determined after testing. Preliminarily, we expect up to 1,000 active message receivers (can be up to 10,000 listed members) and 500 MB storage to be available for free groups.</p>
 <p>&quot;Active message recipient&quot; in this model is a group member who periodically connects to the network, and receives group messages. Members who are listed but don't open the group for some time, for example two weeks, will stop receiving all group messages even when they are connected to the network. This is an evolving design that will balance security for group members and owners, to avoid inflated expenses, and to present realistic membership statistics to the group owners and to prospective members.</p>
-<p>Private messaging with contacts and in private groups within &quot;fair use&quot; limits we apply today will remain free:</p>
+<p>Private messaging with contacts and in private groups within &quot;fair use&quot; limits that we apply today will remain free:</p>
 <ul>
 <li>there can be up to 128 undelivered messages per destination,</li>
 <li>the undelivered messages are stored up to 21 days,</li>
@@ -606,16 +626,15 @@ window.addEventListener('click',(e)=>{
 <li>files are available for download for up to 2 days.</li>
 </ul>
 <p>Larger limits may be offered in paid tier, but it is not planned initially — the focus of Community Vouchers is to create a commercial model for communities.</p>
-<h3 id="how-might-vouchers-work" tabindex="-1">How Might Vouchers Work?</h3>
-<p>Buy via app (like phone top-ups), with unused capacity shown in the app.</p>
+<h3 id="how-will-vouchers-work" tabindex="-1">How Will Vouchers Work?</h3>
+<p>Buy via app (like phone top-ups), with unused capacity shown in the app. An important design goal is to make Community Vouchers available to people who don't use any cryptocurrencies.</p>
 <p>Testnet is likely to use hashed IDs for privacy and on-chain payments, to validate the pricing and economic model. Zero-knowledge proofs and in-app payments will be added by the time production network is launched.</p>
 <h3 id="will-self-hosted-servers-still-be-supported-by-simplex-network" tabindex="-1">Will self-hosted servers still be supported by SimpleX network?</h3>
-<p>Yes, absolutely. Not only we will continue to provide support to self-hosted servers, but we will improve it. We see network decentralization and server portability as exceptionally important, and while we need to develop a robust commercial model for the servers, we still need community supported servers to function, with all servers operating in single network.</p>
-<p>It will be possible for all users:</p>
+<p>Yes, absolutely. Not only will the apps continue to support self-hosted servers, but we will improve it. We see network decentralization and server portability as very important, and while we need to develop a robust commercial model for the servers, we still need community-hosted servers to function, with all people using a single network:</p>
 <ul>
-<li>to join paid groups that use Community Vouchers via your own servers.</li>
-<li>to join groups that are run on free community-hosted servers.</li>
-<li>to create new server operators (collections of servers operated by one entity), so that the same features that are now available only for preset servers will be available to all servers very soon.</li>
+<li>users who use self-hosted servers will be able to join groups that use pre-configured servers or Community Vouchers.</li>
+<li>users who use pre-configured servers will be able to join groups that are run on free community-hosted servers, same as today.</li>
+<li>you will be able to create new server operators (collections of messaging and file servers operated by one entity), so that the features currently available only for preset servers will be available to all servers very soon, and all servers that you and your community members want to use can be added to the app by scanning a QR code.</li>
 </ul>
 <h3 id="what-problems-community-vouchers-solve-that-other-payment-methods-cant" tabindex="-1">What problems Community Vouchers solve that other payment methods can't?</h3>
 <p>Community Vouchers implemented via smart contracts on blockchain solve these problems:</p>
@@ -633,13 +652,18 @@ window.addEventListener('click',(e)=>{
 <li>all operations on blockchain will be supported by network servers that will run full blockchain nodes. For important requests, such as name resolution, the clients will use 2 or 3 independent servers, to ensure protection from MITM attacks.</li>
 <li>blockchain operations will be proxied, in the same way as it happens with private message routing.</li>
 </ul>
-<p>We will be publishing the whitepaper with this design. It will provide an unprecedented level of security and privacy for blockchain applications, irrespective of which chain we choose to use.</p>
-<h3 id="how-many-community-vouchers-will-be-pre-sold-and-available-during-public-sale" tabindex="-1">How many Community Vouchers will be pre-sold and available during public sale?</h3>
-<p>None. There will be no Community Vouchers pre-sold or in any other way made available to the team, or to investors or to the public.</p>
-<p>Any blockchain token that is pre-sold to insiders and/or to the public with the objective to raise funds to develop technology is not a utility token, regardless of how it's named — it becomes an investment contract that passes <a href="https://www.investopedia.com/terms/h/howey-test.asp">Howey test</a>.</p>
+<p>We will be publishing the whitepaper about this design. It will provide an unprecedented level of security and privacy for blockchain applications, irrespective of which chain we choose to use.</p>
+<h3 id="will-community-vouchers-be-pre-sold-via-private-or-public-sale" tabindex="-1">Will Community Vouchers be pre-sold via private or public sale?</h3>
+<p>There will be no Community Vouchers pre-sold or in any other way made available to the team, or to investors or to the public.</p>
+<p>Any blockchain token that is pre-sold to raise funds to develop technology is not a utility token, regardless of how it's named — it becomes an investment contract that passes <a href="https://www.investopedia.com/terms/h/howey-test.asp">Howey test</a>.</p>
 <p>This is not what we are doing. Community Vouchers are restricted utility tokens, not an investment contract. They will be only issued on demand to people who want to pay for network servers, at a fixed price.</p>
 <h3 id="who-will-sell-vouchers" tabindex="-1">Who will sell vouchers?</h3>
-<p>Community Vouchers will be sold via a smart contract in exchange for some other tradeable tokens, most likely stablecoins. We don't plan token emission, or any public or private pre-sales. And we won't have access to the funds from voucher sales — they will be locked in a smart contract, and only released once servers have provided capacity to the users, with the funds shared between server operators and SimpleX network, with operators receiving up to 60%, depending on trust evaluation. SimpleX network funds will be managed by smart contracts, and will be used for governance and development as defined by the contracts. Their price will be fixed based on server costs, with the exact economic model developed during testing phase.</p>
+<p>Initially, Community Vouchers will be sold via a smart contract in exchange for some other tradeable tokens, most likely stablecoins. We don't plan any token emission, or any public or private pre-sales. And we won't have access to the funds from voucher sales — they will be locked in a smart contract, and only released once servers have provided capacity to the users, with the funds shared between server operators and the SimpleX network, with operators receiving up to 60%, depending on trust evaluation. The SimpleX network funds will be managed by smart contracts, and will be used for governance and development as defined by the contracts. Their price will be fixed based on server costs, with the exact economic model developed during the testing phase.</p>
+<h3 id="how-the-server-operator-revenue-share-is-determined" tabindex="-1">How the server operator revenue share is determined?</h3>
+<p>It will be based on the goal that servers must provide both reliability and security to the users. Security in any multi-node network depends on users' ability to choose independent servers that are provided by different entities, and the apps are already programmed not just to use different servers for the message delivery path, but to use servers of different operators. Even though currently there are only 2 preset operators — SimpleX Chat and Flux — and all servers added to the app by the user are considered a third operator, it substantially improves privacy and security.</p>
+<p>In the future, the operators that confirmed their identity to the network will receive a much higher revenue share than anonymous ones. We believe that for users to be private and secure, operators must be known, and must accept legally binding terms of operation, same as preset operators do today.</p>
+<p>The other two factors that will affect &quot;trust evaluation&quot; will be how long the operator was available on the network and servers' availability uptime. Similar to how we monitor the uptime of our servers, the network will monitor the uptime of all servers, and it will affect the revenue share.</p>
+<p>We don't have an exact model for revenue sharing yet; it will be determined during testing and will evolve based on feedback from users and server operators.</p>
 <h3 id="who-will-control-and-upgrade-smart-contracts" tabindex="-1">Who will control and upgrade smart contracts?</h3>
 <p>Community Vouchers will require several smart contracts for their functioning. During testing and development, SimpleX Chat will maintain and update all contracts. Once the network is ready for production, some critical contracts (e.g., those that control the funds) will be immutable, requiring a lot of testing and a security audit, and some less critical contracts will still be upgradeable based on a consensus model (e.g., multisig or voting).</p>
 <p>It is always a journey from knowing that something is possible to knowing how exactly it will be done, and we are at the early stage of knowing it is possible. Specific designs would evolve, based on the input from legal and blockchain experts, and from the community — as everything else we develop for SimpleX network.</p>
@@ -648,14 +672,14 @@ window.addEventListener('click',(e)=>{
 <p>Community Vouchers are designed with a single purpose — to facilitate payments for servers' capacity in a way that protects users' security. Smart contracts implementing them will restrict or completely prohibit trading. The specific parameters will be determined during design evolution and testing.</p>
 <h3 id="why-not-existing-crypto" tabindex="-1">Why Not Existing Crypto?</h3>
 <p>Existing cryptocurrencies do not allow the implementation of the required model for Community Vouchers. The price of cryptocurrencies is determined speculatively, and not based on costs. The fact that they can be freely traded and transferred exposes existing cryptocurrencies and tokens to financial regulations.</p>
-<p>The existing cryptocurrencies such as XMR, BTC and some others are very likely to be accepted as payment for Community Vouchers, via bridges, but they cannot be used in the foundation of the system, because they are not as flexible as smart contracts, and cannot directly support the model we are developing.</p>
+<p>The existing cryptocurrencies such as XMR, BTC and some others will be accepted as payment for Community Vouchers, via bridges, but they cannot be used in the foundation of the system, because they are not as flexible as smart contracts, and cannot directly support the model we are developing.</p>
 <h3 id="why-build-on-ethereum-blockchain" tabindex="-1">Why build on Ethereum blockchain?</h3>
 <p>Many people dislike Ethereum for its high energy usage and high transaction costs in the past. Also, blockchain transactions cannot provide privacy, can they? Why not use Monero (XMR) instead?</p>
 <p>This was our assessment as well in the past. But the last three years changed it, addressing energy usage and transaction costs, and we've seen the growth of several L2 Ethereum blockchains. What made us decide that EVM-based blockchain is the best choice for the current stage is the planned rollout of zkEVM in 2025 with native support for zero-knowledge proofs.</p>
 <p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2024-04-26-commercial-model.md">Our early ideas about Community Vouchers</a> and <a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-10-23-vouchers.md">the most recent design</a> rely on zero-knowledge proofs, and as it will be natively supported, EVM blockchains provide a much better foundation to build Community Vouchers than building them from scratch — there is no need to re-invent solutions to problems that are already solved.</p>
 <h3 id="have-you-considered-other-blockchains" tabindex="-1">Have you considered other blockchains?</h3>
 <p>We are actively considering which blockchain to build on. Ethereum ecosystem is the most widely adopted, and has very mature systems and tools, and it appears sufficient, but it has its downsides, as does everything. So we are not yet committed to Ethereum.</p>
-<h3 id="why-use-erc20-specification-isnt-it-designed-for-freely-tradable-tokens" tabindex="-1">Why use ERC20 specification — isn't it designed for freely tradable tokens?</h3>
+<h3 id="why-use-erc20-specification-isnt-it-designed-for-freely-tradable-tokens" tabindex="-1">Why use ERC20 specification? Isn't it designed for freely tradable tokens?</h3>
 <p><a href="https://eips.ethereum.org/EIPS/eip-20">ERC20 token specification</a> has wider scope. It is very simple, one of the earliest, and the most adopted standard on EVM blockchain. It defines tokens, but they don't have to be freely tradeable — the specification allows any extensions and restrictions implemented on top of it.</p>
 <p>Because of its wide adoption, this specification is the right choice to build on, at least initially, as it will be compatible with all wallets and existing tools out of the box, making testing, development, and early adoption much easier.</p>
 <h3 id="if-you-build-on-another-blockchain-how-the-nft-will-be-used-to-provide-access" tabindex="-1">If you build on another blockchain, how the NFT will be used to provide access?</h3>
