deploy: 6ff87b8e834132a2db785cec4d9754f68fe34a70

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -730,7 +730,7 @@ window.addEventListener('click',(e)=>{
 
                     
 
-                    <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
+                    <!-- <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
                         <div class="relative flex items-center justify-between">
                             <button class="menu flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="menu-icon h-4 w-4 fill-[rgb(60,60,60)] dark:fill-white">
@@ -759,7 +759,7 @@ window.addEventListener('click',(e)=>{
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div><p>| Updated 09.09.2024 | Languages: EN |</p>
 <h1 id="download-simplex-apps" tabindex="-1">Download SimpleX apps</h1>
 <p>You can get the latest beta releases from <a href="https://github.com/simplex-chat/simplex-chat/releases">GitHub</a>.</p>
