--- a/security/index.html
+++ b/security/index.html
@@ -730,7 +730,7 @@ window.addEventListener('click',(e)=>{
 
                     
 
-                    <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
+                    <!-- <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
                         <div class="relative flex items-center justify-between">
                             <button class="menu flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="menu-icon h-4 w-4 fill-[rgb(60,60,60)] dark:fill-white">
@@ -759,7 +759,7 @@ window.addEventListener('click',(e)=>{
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div><h1 id="security-policy" tabindex="-1">Security Policy</h1>
 <p>While great care is taken to ensure the highest level of security and privacy in SimpleX network servers and clients, all software can have flaws, and we believe it is a critical part of an organization's social responsibility to minimize the impact of these flaws through continual vulnerability discovery efforts, defense in depth design, and prompt remediation and notification.</p>
 <p>The implementation security assessment of SimpleX cryptography and networking was done by Trail of Bits in <a href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">November 2022</a>.</p>
