--- a/transparency/index.html
+++ b/transparency/index.html
@@ -730,7 +730,7 @@ window.addEventListener('click',(e)=>{
 
                     
 
-                    <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
+                    <!-- <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
                         <div class="relative flex items-center justify-between">
                             <button class="menu flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="menu-icon h-4 w-4 fill-[rgb(60,60,60)] dark:fill-white">
@@ -759,7 +759,7 @@ window.addEventListener('click',(e)=>{
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div><h1 id="transparency-reports" tabindex="-1">Transparency Reports</h1>
 <p><strong>Updated</strong>: Jan 15, 2025</p>
 <p>SimpleX Chat Ltd. is a company registered in the UK – it develops communication software enabling users to operate and communicate via SimpleX network, without user profile identifiers of any kind, and without having their data hosted by any network infrastructure operators.</p>
