website: update Community Vouchers page

--- a/website/src/messaging.html
+++ b/website/src/messaging.html
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.html
-title: "SimpleX Chat: Learn more about SimpleX messaging"
+title: "SimpleX Chat: The World's Most Secure Messaging"
 description: "SimpleX Chat - a private and encrypted messenger without any user IDs (not even random ones)! Make a private connection via link / QR code to send messages and make calls."
 templateEngineOverride: njk
 ---
