--- a/website/src/index.html
+++ b/website/src/index.html
@@ -31,7 +31,7 @@ active_home: true
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ title }}"/>
     <meta property="og:description" content="{{ description }}"/>
-    <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.png"/>
+    <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.jpg"/>
     <meta name="twitter:card" content="summary"/>
     <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico"/>
 
@@ -155,7 +155,7 @@ active_home: true
                         <h2>{{ "index-token-h2" | i18n({}, lang) }}</h2>
                         <p>{{ "index-token-p1" | i18n({}, lang) }}</p>
                         <p>{{ "index-token-p2" | i18n({}, lang) }}</p>
-                        <a class="gradient-text" href="/token">{{ "index-token-cta" | i18n({}, lang) | safe }}</a>
+                        <a class="gradient-text" href="/vouchers">{{ "index-token-cta" | i18n({}, lang) | safe }}</a>
                     </div>
                 </div>
             </section>
