add rtl support

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -166,17 +166,17 @@ active_home: true
                         <h2>{{ "index-roadmap-h2" | i18n({}, lang) }}</h2>
                         <div class="roadmap">
                             <p>{{ "index-roadmap-2025" | i18n({}, lang) }} </p>
-                            <p class="title"><span>: </span>{{ "index-roadmap-2025-title" | i18n({}, lang) }}</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>{{ "index-roadmap-2025-title" | i18n({}, lang) }}</p>
                             <p>{{ "index-roadmap-2025-desc" | i18n({}, lang) }}</p>
                         </div>
                         <div class="roadmap">
                             <p>{{ "index-roadmap-2026" | i18n({}, lang) }} </p>
-                            <p class="title"><span>: </span>{{ "index-roadmap-2026-title" | i18n({}, lang) }}</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>{{ "index-roadmap-2026-title" | i18n({}, lang) }}</p>
                             <p>{{ "index-roadmap-2026-desc" | i18n({}, lang) }}</p>
                         </div>
                         <div class="roadmap">
                             <p>{{ "index-roadmap-2027" | i18n({}, lang) }} </p>
-                            <p class="title"><span>: </span>{{ "index-roadmap-2027-title" | i18n({}, lang) }}</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>{{ "index-roadmap-2027-title" | i18n({}, lang) }}</p>
                             <p>{{ "index-roadmap-2027-desc" | i18n({}, lang) }}</p>
                         </div>
                     </div>
