deploy: 3691bf9e67ec1ed6ab7f1675ffeae4c9754418e4

--- a/donate/index.html
+++ b/donate/index.html
@@ -379,19 +379,14 @@ window.addEventListener('click',(e)=>{
 <p>Your donations help us raise more funds - any amount, even the price of the cup of coffee, makes a big difference for us.</p>
 <p>Please donate via:</p>
 <ul>
-<li><a href="https://github.com/sponsors/simplex-chat">GitHub</a> (commission-free) or <a href="https://opencollective.com/simplex-chat">OpenCollective</a> (~10% commission).</li>
+<li><a href="https://github.com/sponsors/simplex-chat">GitHub</a> (commission-free) or <a href="https://opencollective.com/simplex-chat">OpenCollective</a> (~10% commission)</li>
 <li>BTC: <a href="bitcoin:bc1q2gy6f02nn6vvcxs0pnu29tpnpyz0qf66505d4u">bc1q2gy6f02nn6vvcxs0pnu29tpnpyz0qf66505d4u</a></li>
 <li>XMR: <a href="monero:8568eeVjaJ1RQ65ZUn9PRQ8ENtqeX9VVhcCYYhnVLxhV4JtBqw42so2VEUDQZNkFfsH5sXCuV7FN8VhRQ21DkNibTZP57Qt">8568eeVjaJ1RQ65ZUn9PRQ8ENtqeX9VVhcCYYhnVLxhV4JtBqw42so2VEUDQZNkFfsH5sXCuV7FN8VhRQ21DkNibTZP57Qt</a></li>
-<li>BCH: <a href="bitcoincash:qq6c8vfvxqrk6rhdysgvkhqc24sggkfsx5nqvdlqcg">qq6c8vfvxqrk6rhdysgvkhqc24sggkfsx5nqvdlqcg</a></li>
 <li>ETH/USDT (Ethereum, Arbitrum One): <a href="ethereum:0xD7047Fe3Eecb2f2FF78d839dD927Be27Bc12c86a">0xD7047Fe3Eecb2f2FF78d839dD927Be27Bc12c86a</a> (<a href="ethereum:0xD7047Fe3Eecb2f2FF78d839dD927Be27Bc12c86a">donate.simplexchat.eth</a>)</li>
-<li>ZEC: <a href="zcash:t1fwjQW5gpFhDqXNhxqDWyF9j9WeKvVS5Jg">t1fwjQW5gpFhDqXNhxqDWyF9j9WeKvVS5Jg</a></li>
-<li>ZEC shielded: <a href="zcash:u16rnvkflumf5uw9frngc2lymvmzgdr2mmc9unyu0l44unwfmdcpfm0axujd2w34ct3ye709azxsqge45705lpvvqu264ltzvfay55ygyq">u16rnvkflumf5uw9frngc2lymvmzgdr2mmc9unyu0l44unwfmdcpfm0axujd2w34ct3ye709azxsqge45705lpvvqu264ltzvfay55ygyq</a></li>
-<li>DOGE: <a href="dogecoin:D99pV4n9TrPxBPCkQGx4w4SMSa6QjRBxPf">D99pV4n9TrPxBPCkQGx4w4SMSa6QjRBxPf</a></li>
-<li>SOL: <a href="solana:7JCf5m3TiHmYKZVr6jCu1KeZVtb9Y1jRMQDU69p5ARnu">7JCf5m3TiHmYKZVr6jCu1KeZVtb9Y1jRMQDU69p5ARnu</a></li>
+<li><a href="https://github.com/simplex-chat/simplex-chat#please-support-us-with-your-donations">Other cryptocurrencies</a></li>
 </ul>
 <p>Thank you,</p>
-<p>Evgeny</p>
-<p>SimpleX Chat founder</p>
+<p>Evgeny, SimpleX Chat founder</p>
 <h2 id="simplex-community-vouchers" tabindex="-1">SimpleX Community Vouchers</h2>
 <p>Please comment on our plan to make SimpleX network sustainable and get a free access pass (an NFT) for early testing: <a href="https://simplex.chat/vouchers">https://simplex.chat/vouchers</a></p>
 </div>
