deploy: 889b5ac2f5f0feb0f780da45a7655d1561df3af6

--- a/faq/index.html
+++ b/faq/index.html
@@ -816,7 +816,7 @@ window.addEventListener('click',(e)=>{
 <p>This feature is unique to SimpleX Chat – it is independent from chat profiles.</p>
 <p>When &quot;Incognito Mode” is turned on, your currently chosen profile name and image are hidden from your new contacts. It allows anonymous connections with other people without any shared data – when you make new connections or join groups via a link a new random profile name will be generated for each connection.</p>
 <h3 id="how-do-invitations-work" tabindex="-1">How do invitations work?</h3>
-<p>It is quite a complex process, but fortunately all of this happens in the background, so it's simply to use.</p>
+<p>It is quite a complex process, but fortunately all of this happens in the background, so it's simple to use.</p>
 <p>Whenever somebody connects to you via your address, they basically ask your client whether they want to establish connection. After that, you can either agree or disagree.<br>
 If interested, please read more: <a href="/docs/guide/making-connections.html">Addresses and invitations</a>.</p>
 <h3 id="how-to-configure-and-delete-groups" tabindex="-1">How to configure and delete groups?</h3>
@@ -848,7 +848,7 @@ If interested, please read more: <a href="/docs/guide/making-connections.html">A
 <p>This is different from most other messengers that allow deleting messages from the recipients' devices without any agreement with the recipients.</p>
 <p>We believe that allowing deleting information from your device to your contacts is a very wrong design decision for several reasons:</p>
 <ol>
-<li>it violates your data sovereignty as the device owner - once your are in possession of any information, you have the rights to retain it, and any deletion should be agreed with you. And security and privacy is not possible if users don't have sovereignty over their devices.</li>
+<li>it violates your data sovereignty as the device owner - once you are in possession of any information, you have the rights to retain it, and any deletion should be agreed with you. And security and privacy is not possible if users don't have sovereignty over their devices.</li>
 <li>it may be a business communication, and either your organization policy or a compliance requirement is that every message you receive must be preserved for some time.</li>
 <li>the message can contain a legally binding promise, effectively a contract between you and your contact, in which case you both need to keep it.</li>
 <li>the messages may contain threat or abuse and you may want to keep them as a proof.</li>
