deploy: 448f0f1ca1364d6fd08972c567a0a3fc0a91b11c

--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -660,9 +660,7 @@ window.addEventListener('click',(e)=>{
 <li>servers that operated for a longer time.</li>
 </ul>
 <p><strong>What is technology design?</strong></p>
-<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2024-04-26-commercial-model.md">Early ideas about Community Vouchers</a>.</p>
-<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-10-23-vouchers.md">The most recent design</a> based on zero-knowledge proofs.</p>
-<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-12-17-community-vouchers-faq.md">Previosly shared FAQ</a>.</p>
+<p><a href="https://github.com/simplex-chat/simplex-chat/blob/master/docs/rfcs/2025-12-10-vouchers-2.md">The conceptual design</a> for Community Vouchers uses zero-knowledge proofs, making the purchase, assigning vouchers to groups and their redemptions unlinkable.</p>
 <p>A whitepaper will be published in February 2026.</p>
 <h2 id="disclaimer" tabindex="-1">Disclaimer</h2>
 <p>This design is evolving — please share your feedback.</p>
