deploy: 0f65ba029125ab7c32a6b78ef941cb962f759fb5

--- a/ar/index.html
+++ b/ar/index.html
@@ -694,6 +694,7 @@ window.addEventListener('click',(e)=>{
                     <p>مئات الآلاف من الأشخاص يثقون بالفعل في مُراسلة SimpleX.</p>
                     <p>ابحث عن مجتمعاتك في دليل SimpleX وأنشئ مجتمعك الخاص!</p>
                     <a class="gradient-text" href="/directory">اعرض دليل SimpleX</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">17:00 UTC</a>, 01/09.</p>
                 </div>
             </div>
         </section>
