--- a/it/index.html
+++ b/it/index.html
@@ -694,6 +694,7 @@ window.addEventListener('click',(e)=>{
                     <p>Centinaia di migliaia di persone si fidano già di SimpleX.</p>
                     <p>Trova le comunità nella directory di SimpleX e creane una tua!</p>
                     <a class="gradient-text" href="/directory">Vedi la directory di SimpleX</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">17:00 UTC</a>, 01/09.</p>
                 </div>
             </div>
         </section>
