--- a/es/index.html
+++ b/es/index.html
@@ -694,6 +694,7 @@ window.addEventListener('click',(e)=>{
                     <p>Miles de personas confían ya en la mensajería SimpleX.</p>
                     <p>¡Encuentra comunidades en el directorio SimpleX y crea la tuya!</p>
                     <a class="gradient-text" href="/directory">Ir al Directorio SimpleX</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">14:00 UTC</a>, 01/13.</p>
                 </div>
             </div>
         </section>
