--- a/hu/index.html
+++ b/hu/index.html
@@ -694,6 +694,7 @@ window.addEventListener('click',(e)=>{
                     <p>Már emberek százezrei bíznak a SimpleXen való üzenetváltásban.</p>
                     <p>Találja meg a kedvenc közösségeit a SimpleX csoportjegyzékében, vagy hozza létre a saját csoportját!</p>
                     <a class="gradient-text" href="/directory">SimpleX csoportjegyzék megtekintése</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">14:00 UTC</a>, 01/13.</p>
                 </div>
             </div>
         </section>
