--- a/id/index.html
+++ b/id/index.html
@@ -694,6 +694,7 @@ window.addEventListener('click',(e)=>{
                     <p>Ratusan ribu orang sudah memercayai perpesanan SimpleX.</p>
                     <p>Temukan komunitas Anda di direktori SimpleX dan buat komunitas Anda sendiri!</p>
                     <a class="gradient-text" href="/directory">Lihat Direktori SimpleX</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">14:00 UTC</a>, 01/13.</p>
                 </div>
             </div>
         </section>
